enum CategoryDialogAccessibilityIdentifiers {
    static let renameCategoryInput = "edit_feed_category_rename_input"
    static let renameCategorySaveButton = "edit_feed_category_rename_save"
}
