enum ReaderImageViewerIds {
    static let viewer = "reader_image_viewer"
    static let closeButton = "reader_image_viewer_close_button"
    static let shareButton = "reader_image_viewer_share_button"
}
